# fast_api_sync

./: .gitignore  pyproject.toml
src/fast_api/: app.py  models.py  schemas.py  settings.py
tests/: conftest.py  test_app.py  test_db.py
