[project]
name = "fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Otavio Santos Inacio",email = "otaviosantosinacio@gmail.com"}
]
readme = "README.md"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)"
]
[tool.poetry.dependencies]
python = "3.14.*"
[tool.poetry]
packages = [{include = "fast_api", from = "src"}]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff. lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev src/fast_api/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src/fast_api -vv'
post_test = 'coverage html'
lint = 'ruff check .; ruff check  . --diff'
format = 'ruff check . --fix ; ruff format .'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "ruff (>=0.15.10,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]
